Code cleanup, more TODOs